[fix] table borders in dark mode

--- a/assets/main.css
+++ b/assets/main.css
@@ -561,7 +561,7 @@ th {
     }
 
     td {
-        border-color: #222;
+        border-color: #9f9f9f;
     }
 
     .laptop-img {
